fix: body overflow bug fixed

--- a/styles/ArticleDisplay.module.sass
+++ b/styles/ArticleDisplay.module.sass
@@ -1,13 +1,13 @@
 .container
   display: flex
-  flex-basis: 100%
+  height: 100%
+  overflow: hidden
 
 .main
   flex-basis: 100%
   flex-shrink: 1
   overflow: auto
   padding: 30px 30px
-
 
 $page-padding: 20px
 .page
@@ -17,7 +17,6 @@ $page-padding: 20px
   min-height: 100%
   border-radius: 20px
   box-shadow: 3px 3px 10px #ccc
-  overflow: hidden
 
 .menu
   flex-basis: 18%
