--- a/styles/components/Header.module.sass
+++ b/styles/components/Header.module.sass
@@ -3,7 +3,7 @@ $header-height: 3.5rem
   width: 100%
   display: flex
   overflow: hidden
-  height: $header-height
+  flex-basis: $header-height
   flex-shrink: 0
   justify-content: space-between
   background-color: var(--sider-bg-color)
@@ -18,7 +18,7 @@ $header-height: 3.5rem
 
 .headerInfo
   background-color: var(--sider-bg-color)
-  max-height: 100%
+  // max-height: 100%
   display: flex
   flex-basis: 100px
   flex-shrink: 0
