--- a/styles/frame.module.sass
+++ b/styles/frame.module.sass
@@ -20,6 +20,10 @@
   flex-basis: 100%
   display: flex
   flex-flow: column nowrap
-  max-height: 100%
+  // max-height: 100%
   background-color: var(--right-bg-color)
+  overflow: auto
+
+.component
+  flex-basis:100%
   overflow: auto
